sample-helm-chart/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME_PLACEHOLDER
  namespace: NAMESPACE_PLACEHOLDER
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: APP_PORT_PLACEHOLDER
  selector:
    app: APP_NAME_PLACEHOLDER
  type: ClusterIP
status:
  loadBalancer: {}
